remove large images

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,9 +13,9 @@
         {{>header}}
     </div>
 
-    <h1>About cats</h1>
+    <h1>About Me</h1>
 
-    <img src="/img/bomb.jpg" class="portrait">
+    {{!-- <img src="/img/bomb.jpg" class="portrait"> --}}
 
     {{>footer}}
 </body>
