fix icons and paragraphs

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,10 +18,21 @@
         <button type="submit">Search</button>
     </form>
 
-    <p id="error-message"></p>
-    <p id="success-message-1"></p>
-    <p id="success-message-2"></p>
-    <p id="success-message-3"></p>
+    <div id="results">
+        <p id="error-message"></p>
+        <p id="success-message-1"></p>
+        <p id="success-message-2"></p>
+        <p id="success-message-3"></p>
+    </div>
+
+    <template id="icon_template">
+        <img src="" alt="weather-icon">
+    </template>
+
+    <template id="para_template">
+        <p></p>
+    </template>
+
 
     {{>footer}}
 
