--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,7 @@
 
     <h1>About Me</h1>
 
-    {{!-- <img src="/img/bomb.jpg" class="portrait"> --}}
+    <p>This website uses weatherstack.com api and mapbox.com api</p>
 
     {{>footer}}
 </body>
